objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Add_metadata_field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add metadata field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BP_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BP Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BackPromote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BackPromote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Back_Promote_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back Promote Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BitCoin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BitCoin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CI_Picklist_Test__c</fullName>
        <label>CI Picklist Test</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>CCC</fullName>
                </value>
                <value>
                    <fullName>DDD</fullName>
                </value>
                <value>
                    <fullName>FFF</fullName>
                </value>
                <value>
                    <fullName>GGG</fullName>
                </value>
                <value>
                    <fullName>EEE2</fullName>
                    <isActive>false</isActive>
                    <label>EEE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CI_Test_deploy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI Test deploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CI_test_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI test 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CI_test_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI test 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CI_test_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI test 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CO1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CO2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseTime__c</fullName>
        <label>CaseTime</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_AAA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case AAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_BBB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case BBB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_BMW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case BMW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_EEE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case EEE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Field_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Field 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_JJJ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case JJJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_LLL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case LLL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_MMM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case MMM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_NNN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case NNN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_PPP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case PPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_QQQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case QQQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_TTT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case TTT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_UUU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case UUU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_WWW__c</fullName>
        <label>Case WWW</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_YYY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case YYY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_prod_field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case prod field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Bevtrack</fullName>
                </value>
                <value>
                    <fullName>CCE document</fullName>
                </value>
                <value>
                    <fullName>FR - Consumer/Others</fullName>
                </value>
                <value>
                    <fullName>Contract Changes</fullName>
                </value>
                <value>
                    <fullName>FR - Customer PAV</fullName>
                </value>
                <value>
                    <fullName>FR - Customer Powerade Service</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivery Recovery Requests</fullName>
                </value>
                <value>
                    <fullName>EDI Customer</fullName>
                </value>
                <value>
                    <fullName>Employee Relations</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>External (NSC)</fullName>
                </value>
                <value>
                    <fullName>External (SC)</fullName>
                </value>
                <value>
                    <fullName>External Customer</fullName>
                </value>
                <value>
                    <fullName>Files Management</fullName>
                </value>
                <value>
                    <fullName>Flexible Working Application</fullName>
                </value>
                <value>
                    <fullName>Free Products</fullName>
                </value>
                <value>
                    <fullName>Full Service Vending</fullName>
                </value>
                <value>
                    <fullName>HR Information Systems</fullName>
                </value>
                <value>
                    <fullName>Internal (NSC)</fullName>
                </value>
                <value>
                    <fullName>Internal (SC)</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Learning and Development</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Master Data</fullName>
                </value>
                <value>
                    <fullName>Merchandiser</fullName>
                </value>
                <value>
                    <fullName>Misdirects</fullName>
                </value>
                <value>
                    <fullName>New Hire (External Recruitment)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Citroen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Citroen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commit_test_field__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Useless help text!</inlineHelpText>
        <label>Commit test field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Controlling__c</fullName>
        <label>Controlling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Controlling 1</fullName>
                </value>
                <value>
                    <fullName>Controlling 2</fullName>
                </value>
                <value>
                    <fullName>Controlling 3</fullName>
                </value>
                <value>
                    <fullName>Dev1-1</fullName>
                </value>
                <value>
                    <fullName>Dev1-2</fullName>
                </value>
                <value>
                    <fullName>Dev1-3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Picklist__c</fullName>
        <label>Custom Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
                <value>
                    <fullName>Value 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeleteMe2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DeleteMe2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeleteMe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DeleteMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dependent__c</fullName>
        <label>Dependent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Controlling__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Dependent 1</fullName>
                    <label>Dependent 1</label>
                </value>
                <value>
                    <fullName>Dependent 2</fullName>
                </value>
                <value>
                    <fullName>Dependent 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Destructive_Test_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Destructive Test 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Destructive_Test_7__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Destructive Test 7</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Destructive_Test_8__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Destructive Test 8</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLS_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FLS Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Find_and_Replace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Find and Replace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ford__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ford</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jaguar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jaguar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeepMe2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KeepMe2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeepMe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KeepMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Login_IP_restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Login IP restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metadata_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Metadata Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_report_test_field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New report test field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nitro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nitro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pckage_field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pckage field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picklist_bug_test__c</fullName>
        <label>Picklist bug test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test 1</fullName>
                </value>
                <value>
                    <fullName>Test 2</fullName>
                </value>
                <value>
                    <fullName>Test 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Porche__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Porche</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Power</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Category__c</fullName>
        <label>Primary Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Beach</fullName>
                </value>
                <value>
                    <fullName>River</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>3PI</fullName>
                </value>
                <value>
                    <fullName>Accessibility</fullName>
                </value>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>Account Set-up</fullName>
                </value>
                <value>
                    <fullName>Add Access</fullName>
                </value>
                <value>
                    <fullName>Add Contact</fullName>
                </value>
                <value>
                    <fullName>Admin Tools Issue</fullName>
                </value>
                <value>
                    <fullName>Alert</fullName>
                </value>
                <value>
                    <fullName>Amentities Incorrect</fullName>
                </value>
                <value>
                    <fullName>AR Updates</fullName>
                </value>
                <value>
                    <fullName>Atlantis</fullName>
                </value>
                <value>
                    <fullName>Auto Renewals</fullName>
                </value>
                <value>
                    <fullName>Availability Incorrect</fullName>
                </value>
                <value>
                    <fullName>Balcony</fullName>
                </value>
                <value>
                    <fullName>Beach Safety</fullName>
                </value>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Business Model Change</fullName>
                </value>
                <value>
                    <fullName>Cancellation Policy</fullName>
                </value>
                <value>
                    <fullName>Case Escalation Request</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Compensation Change</fullName>
                </value>
                <value>
                    <fullName>Confirmation</fullName>
                </value>
                <value>
                    <fullName>Connectivity Partner Outage</fullName>
                </value>
                <value>
                    <fullName>Connectivity Solution Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pull_request_test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pull request test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_test_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report test Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Category_1__c</fullName>
        <label>Sub Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>360 Degree Feedback Survey</fullName>
                </value>
                <value>
                    <fullName>Absence Management</fullName>
                </value>
                <value>
                    <fullName>Absences</fullName>
                </value>
                <value>
                    <fullName>Absences (Kronos)</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Account Change</fullName>
                </value>
                <value>
                    <fullName>Account Information Change</fullName>
                </value>
                <value>
                    <fullName>Account is a MOG</fullName>
                </value>
                <value>
                    <fullName>Account is a National Account</fullName>
                </value>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Accruals/Quotas</fullName>
                </value>
                <value>
                    <fullName>Accruals/quotas (Kronos)</fullName>
                </value>
                <value>
                    <fullName>Admin change</fullName>
                </value>
                <value>
                    <fullName>Admin change without AR</fullName>
                </value>
                <value>
                    <fullName>Administrative Placement</fullName>
                </value>
                <value>
                    <fullName>ADP Payroll G2</fullName>
                </value>
                <value>
                    <fullName>Advance Payment</fullName>
                </value>
                <value>
                    <fullName>Aged Debt</fullName>
                </value>
                <value>
                    <fullName>Airport Calls</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Altercation</fullName>
                </value>
                <value>
                    <fullName>Amend Org Unit</fullName>
                </value>
                <value>
                    <fullName>Amend Position</fullName>
                </value>
                <value>
                    <fullName>Any Question of Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Appeals</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AR - Change</fullName>
                </value>
                <value>
                    <fullName>AR- Creation</fullName>
                </value>
                <value>
                    <fullName>AR - New</fullName>
                </value>
                <value>
                    <fullName>AR- Suppression</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Analysis__c</fullName>
        <label>Support Analysis</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado Knowledge</fullName>
                </value>
                <value>
                    <fullName>Salesforce Knowledge</fullName>
                </value>
                <value>
                    <fullName>Metadata API Knowledge</fullName>
                </value>
                <value>
                    <fullName>Git Knowledge</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Diageo__c</fullName>
        <label>Test Diageo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                    <isActive>false</isActive>
                    <label>6</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <isActive>false</isActive>
                    <label>7</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_IBM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test IBM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Translation100__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Translation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Translation10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Translation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Translation11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Translation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>US_CI_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US CI Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Update_deployment_flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update deployment flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>V9_test_flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>V9 test flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version_8_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Version 8.1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.0.0</fullName>
                </value>
                <value>
                    <fullName>1.0.1</fullName>
                </value>
                <value>
                    <fullName>2.0.0</fullName>
                </value>
                <value>
                    <fullName>2.0.1</fullName>
                </value>
                <value>
                    <fullName>2.1.0</fullName>
                </value>
                <value>
                    <fullName>2.1.1</fullName>
                </value>
                <value>
                    <fullName>2.1.2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <label>Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Jueves</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                    <isActive>false</isActive>
                    <label>Wednesday</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bug_test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>bug test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>case_KKK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case KKK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>case_RRR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case_RRR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>commit_file_field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>commit file field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>commit_files_fix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>commit files fix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>convert__c</fullName>
        <label>convert</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delete_test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>delete test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>depth_deplo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>depth deplo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>depth_test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>depth test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>formula_check__c</fullName>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>master_bug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>master bug</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>